Fixing overflowing images and background

--- a/Newbie Projects/FAQ accordion card/css/style.css
+++ b/Newbie Projects/FAQ accordion card/css/style.css
@@ -54,13 +54,34 @@ body {
   align-items: center;
 }
 
+.wrapper {
+  width: 88%;
+  max-width: 40rem;
+  position: relative;
+}
+@media (min-width: 1200px) {
+  .wrapper {
+    max-width: 88rem;
+  }
+  .wrapper::before {
+    content: "";
+    position: absolute;
+    background-image: url("../../images/illustration-box-desktop.svg");
+    height: 18rem;
+    width: 18rem;
+    background-size: cover;
+    z-index: 1;
+    top: 14rem;
+    left: -9rem;
+  }
+}
+
 .faq-section {
   display: flex;
   flex-flow: column wrap;
   align-items: center;
   background-color: #fff;
-  width: 88%;
-  max-width: 40rem;
+  width: 100%;
   border-radius: 2rem;
   padding: 0 2rem 4.5rem 2rem;
   margin: 12rem 0 6rem 0;
@@ -69,9 +90,9 @@ body {
 @media (min-width: 1200px) {
   .faq-section {
     flex-flow: row wrap;
-    max-width: 88rem;
     margin: 0;
     padding: 2rem 8rem 6rem 6rem;
+    overflow: hidden;
   }
 }
 
@@ -146,11 +167,6 @@ body {
   width: 80rem;
   top: -44rem;
   left: -52.5rem;
-}
-.desktop-imgs-container__box {
-  position: absolute;
-  top: -5.7rem;
-  left: -15.3rem;
 }
 
 /*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
